tests/errors/syn_method36.java
public class syn_method36 {
static void main ( ) {
 
}
}